# G1_Hand

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.localized.bak  CMakeLists.txt.unlocalized.bak  board_connect.md  can_protocol.md  can_test_packets.md  微型手指执行器用户手册 V1.4 2026.04.30.md
board/hpm6e00_ethercat_slave/: board.c  board.h  hpm6e00_ethercat_slave.cfg  pinmux.c
drivers/bsp/: bsp_gpio.c  bsp_gpio.h  bsp_systick.c  bsp_systick.h  bsp_uart.c  bsp_uart.h
drivers/device_driver/: drv_can.c  drv_can.h  drv_led.c  drv_led.h  drv_log_uart.c  drv_log_uart.h  drv_rs485.c  drv_rs485.h
middlewares/log/: log.c  log.h
middlewares/protocol_tools/: protocol_parser.c
middlewares/utils/: kfifo.c  kfifo.h
service/: finger.c  finger.h  led.c  led.h  led.md  motor_control.c  motor_control.h
user_app/: app_main.c
user_app/tasks/: canfd_task.c  canfd_task.h  finger_task.c  finger_task.h  led_task.c  led_task.h  log_task.c  log_task.h  motor_control_task.c  motor_control_task.h  motor_link_task.c  motor_link_task.h  rs485_sample_task.c  rs485_sample_task.h  uart_task.c  uart_task.h
